# obs-plugin-template

./: CMakeLists.txt  README.md  buildspec.json
